force-core/main/default/objects/Trigger_Handler__mdt/Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <description>Define Trigger Handlers called by the Trigger Dispatcher</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>