force-core/main/default/objects/Trigger_Handler__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag whether Trigger Handler is active</description>
    <inlineHelpText>Flag whether Trigger Handler is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>