force-core/main/default/objects/Trigger_Handler__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Full name of the class that contains the trigger handler function</description>
    <inlineHelpText>Full name of the class that contains the trigger handler function</inlineHelpText>
    <label>Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>