force-core/main/default/objects/Trigger_Handler__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Name of the Object</description>
    <inlineHelpText>Name of the Object</inlineHelpText>
    <label>Object Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>