force-core/main/default/objects/Trigger_Handler__mdt/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <description>enum value for a trigger event, e.g. BEFORE_INSERT</description>
    <inlineHelpText>enum value for a trigger event, e.g. BEFORE_INSERT</inlineHelpText>
    <label>Trigger Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>